Gjort en migration och byggt databasen. Controller har genererats för CRUD anrop

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultDbStrings": "Data Source=Todo.db"
+    "DefaultDbString": "Data Source=Todo.db"
   }
 }
